Fixed some spacing

--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@ h1 {
 }
 
 .genres {
-    margin-top: 1.2em;
+    margin-top: 3.2em;
 }
 
 .genres p {
@@ -142,7 +142,7 @@ h1 {
     overflow-x: auto;
     margin-right: 0;
     margin-left: 0;
-    margin-top: 2.5rem;
+    margin-top: 4.5rem;
 }
 
 .card-img-top {
